revert: remove unnecessary Java 25 / --enable-preview from pom.xml